# MitoRiboPy

./: .gitignore  CHANGELOG.md  CITATION.cff  HUMAN_SAMPLE_UPDATE_AND_FILE_GUIDE.txt  HUMAN_STOP_VALIDATION_AND_CODON_DATA_ASSESSMENT.txt  MANIFEST.in  OFFSET_PICKING_REFINEMENT_2026-03-29.txt  PHASE2_MitoRiboPy_SLICE3_CONFIG_DATA_MIGRATION_2026-03-29.txt  README.md  __init__.py  align_config.example.yaml  aligned_ratio.py  bed_processing.py  codon_correlation.py  codon_data.py  igv_style_plot.py  inframe_analysis.py  main.py  offset_analysis.py  pipeline_config.example.json  pipeline_config.example.yaml  pipeline_config.py  plot_style.py  pyproject.toml  rna_seq_analysis.py  rpf_config.example.yaml  run_pipeline.example.sh  run_rpf.example.sh  subsample_bed.py  varna_plot.py
.github/workflows/: ci.yml
docs/: PACKAGE_REFACTOR_SCHEME.md  README.md  benchmarking.md  custom_organisms.md  generate_cli_reference.py  inputs.md  ref-5_fix_report.md  rnaseq_te.md  te_numerics.md
docs/developer/: architecture_history.md  release_checklist.md  roadmap.md
docs/diagrams/: generate_mitoribopy_diagram.py  mitoribopy_package_flow.mmd  mitoribopy_pipeline.mmd  mitoribopy_v0.3.0_pipeline.mmd  render_diagrams.py  render_mitoribopy_diagram.sh
docs/environment/: Dockerfile  environment.yml
docs/reference/: cli.md  config_schema.md  output_schema.md  periodicity.md  sample_sheet_schema.md  warning_codes.md
docs/release-notes/: README.md  v0.1.0-prep.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.4.md  v0.4.5.md  v0.5.0.md  v0.5.1.md  v0.6.0.md  v0.6.2.md  v0.7.1.md
docs/reports/: FULL_RUN_NT3_NT5_OUTPUT_REPORT_2026-03-30.txt  PHASE1_MitoRiboPy_SETUP_2026-03-29.txt  PHASE2_MitoRiboPy_OFFSET_MIGRATION_2026-03-29.txt  PHASE2_MitoRiboPy_SLICE2_IO_MIGRATION_2026-03-29.txt  PHASE2_PHASE3_COMPLETION_REPORT_2026-03-29.txt  PROJECT_AUDIT_REPORT_2026-03-29.txt
docs/reports/v0.3.0/: phase0_baseline_build.txt  phase0_baseline_tests.txt  phase0_cli_and_api_surface.md  phase0_dependency_graph.mmd  phase0_inventory.md  phase8_release_readiness.md
docs/tutorials/: 01_end_to_end_fastq.md  02_rnaseq_integration.md  05_hpc_cluster_run.md
docs/validation/: offset_selection_validation.md  public_dataset_reanalysis.md  rnaseq_te_validation.md  synthetic_mini.md  taco1_ko_regression.md  umi_dedup_validation.md
examples/custom_reference/: README.md  annotation_template.csv  codon_tables_template.json
examples/mock_mixed_umi/: .gitignore  build_indexes.sh  make_mock.py  mock_config.yaml
examples/run_scripts/: run_align.example.sh  run_pipeline.example.sh  run_rpf.example.sh
examples/smoke/: .gitignore  README.md  annotation.csv  expected_outputs.txt  generate_smoke_fastqs.py  human_mt_tiny.fa  pipeline_config.smoke.yaml  samples.condition_map.tsv  samples.tsv
examples/templates/: align_config.example.yaml  pipeline_config.example.yaml  rnaseq_config.example.yaml  rpf_config.example.yaml  run_align.example.sh  run_pipeline.example.sh  run_pipeline.lsf.sh  run_pipeline.slurm.sh  run_rnaseq.example.sh  run_rpf.example.sh
scripts/: dump_site_table.py  install_v0.3.0_bundle.py
src/mitoribopy/: __init__.py  __main__.py  cli.py  console.py  errors.py  progress.py  sample_sheet.py
src/mitoribopy/_legacy/: __init__.py  bed_processing.py  codon_correlation.py  codon_data.py  igv_style_plot.py  inframe_analysis.py  main.py  offset_analysis.py  pipeline_config.py  plot_style.py  rna_seq_analysis.py  subsample_bed.py  varna_plot.py
src/mitoribopy/align/: __init__.py  _types.py  adapter_detect.py  align.py  bam_utils.py  contam.py  dedup.py  read_counts.py  sample_resolve.py  tool_check.py  trim.py
src/mitoribopy/analysis/: __init__.py  codon_correlation.py  fourier_spectrum.py  inframe_analysis.py  offset_enrichment.py  offset_selection.py  periodicity.py  periodicity_qc.py  rna_seq.py  translation_profile_analysis.py
src/mitoribopy/cli/: align.py  (+13 more)
tests/: conftest.py  test_align_adapter_detect.py  test_align_align.py  test_align_bam_utils.py  test_align_cli.py  test_align_contam.py  test_align_dedup.py  test_align_dual_umi.py  test_align_integration.py  test_align_p6_invariants.py  test_align_read_counts.py  test_align_resume.py  test_align_sample_overrides.py  test_align_sample_resolve.py  test_align_tool_check.py  test_align_trim.py  test_all_autowiring.py  test_all_cli.py  test_all_rnaseq_reuse.py  test_all_strict_rnaseq_gates.py  test_always_written_outputs.py  test_analysis_sites.py  test_bam_reader.py  test_benchmark.py  test_canonicalize_config.py  test_cli.py  test_cli_subcommands.py  test_codon_correlation_slope_ci.py  test_codon_correlation_transformations.py  test_codon_tables.py  test_config_runtime.py  test_config_templates_parse.py  test_coverage_frame_metadata.py  test_defensive_guards.py  test_docs_execution.py  test_figure_sidecars.py  test_figure_validator.py  test_fourier_edge_cases.py  test_fourier_spectrum.py  test_fourier_stats.py  (+56 more)
(+69 files in other folders)
