[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MitoRiboPy"
version = "0.4.2"
description = "Mitochondrial ribosome profiling analysis pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Ahram Ahn"},
]
keywords = [
  "bioinformatics",
  "ribosome-profiling",
  "ribo-seq",
  "mitochondria",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "biopython>=1.81",
  "scipy>=1.10",
  "PyYAML>=6.0",
  "pysam>=0.22",
]

[project.urls]
Homepage = "https://github.com/Ahram-Ahn/MitoRiboPy"
Repository = "https://github.com/Ahram-Ahn/MitoRiboPy"
Issues = "https://github.com/Ahram-Ahn/MitoRiboPy/issues"
Changelog = "https://github.com/Ahram-Ahn/MitoRiboPy/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]
toml-py310 = [
  "tomli>=2.0;python_version<'3.11'",
]

[project.scripts]
mitoribopy = "mitoribopy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"mitoribopy.data" = ["*.json", "*.csv"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "requires_tools: integration tests that invoke real external bioinformatics tools (cutadapt, bowtie2, samtools, umi_tools) and are skipped when those are not on PATH.",
]
