[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MitoRiboPy"
version = "0.7.1"
description = "Mitochondrial ribosome profiling analysis pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Ahram Ahn"},
]
keywords = [
  "bioinformatics",
  "ribosome-profiling",
  "ribo-seq",
  "mitochondria",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "biopython>=1.81",
  "scipy>=1.10",
  "PyYAML>=6.0",
  "pysam>=0.22",
]

[project.urls]
Homepage = "https://github.com/Ahram-Ahn/MitoRiboPy"
Repository = "https://github.com/Ahram-Ahn/MitoRiboPy"
Issues = "https://github.com/Ahram-Ahn/MitoRiboPy/issues"
Changelog = "https://github.com/Ahram-Ahn/MitoRiboPy/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  # Optional but installed in dev so the run_manifest.json schema test
  # exercises the full draft 2020-12 validator instead of the minimal
  # required-key fallback.
  "jsonschema>=4.21",
]
release = [
  "build>=1.2",
  "twine>=5.0",
]
toml-py310 = [
  "tomli>=2.0;python_version<'3.11'",
]
fastq = [
  "pydeseq2>=0.4",
]
schema = [
  # Standalone extra for users who want full schema validation of
  # run_manifest.json without the rest of the dev tooling.
  "jsonschema>=4.21",
]

[project.scripts]
mitoribopy = "mitoribopy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"mitoribopy.data" = ["*.json", "*.csv"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "requires_tools: integration tests that invoke real external bioinformatics tools (cutadapt, bowtie2, samtools, umi_tools) and are skipped when those are not on PATH.",
  "smoke: end-to-end smoke test against the bundled examples/smoke/ fixture. Requires the same external tools as requires_tools; opt-in via 'pytest -m smoke'.",
]
